Parts of OCPI locations and command module for remote start (#16)
* feat: add API endpoint to store locations

* fix: adjust firestore location test assertion

* fix: use host.docker.internal for now for cross docker network comms between csms and emsp

* fix: use service host names instead of OS-specific host.docker.internal

* test: rename test to conform with method name

* fix: pass additional location fields to MSP

* fix: remove log messages

* chore: remove TODO comments and explicit nils

* feat: implement the stub of a PostStartSession handler

* feat: send remote start transaction msg on start session command

* feat: pre-authorise adhoc tokens

* chore: log message action

* fix: fix typos in API spec

* chore: encapsulate creation and connection of MQTT call maker for OCPP 1.6, albeit imperfectly

* feat: register commands endpoints in version details endpoint

* fix: fix EVSE ID pattern and store EVSEs with initial status UNKNOWN

* chore: sort .talismanrc
